NEWS                                                            -*- outline -*-
----

Welcome to sbuild 0.58.7.  Please read these release notes carefully.

Full installation instructions are provided in the INSTALL file.  The
README file also contains more specific notes regarding building and
configuration.

* Major changes in 0.58.7:

  None.

* Major changes in 0.58.6:

  None.

* Major changes in 0.58.5:

  None.

* Major changes in 0.58.4:

  None.

* Major changes in 0.58.3:

  1) The broken options --add-depends and --force-depends have been
     replaced by --add-depends, --add-conflicts, --add-depends-indep
     and --add-conflicts-indep.  These options each take a single
     dependency, using the same dependency syntax one would use in
     debian/control.

  2) The wanna-build configuration has been moved back to
     /etc/buildd/wanna-build.conf.  However, the option names have
     been renamed and your configuration will require updating.

  3) When reading configuration files, stricter checking is performed.
     If you see a "Global symbol "$x" requires explicit package
     name" error, then the option $x is not valid and should be
     removed from the configuration file indicated.

  4) The maintainer name no longer defaults to DEBEMAIL as in most
     cases the maintainer in the .dsc should be used.

* Major changes in 0.58.2:

  None.

* Major changes in 0.58.1:

  None.

* Major changes in 0.58.0:

  1) The configuration option @no_auto_upgrade, which was no longer
     used, has been removed.  To prevent packages being upgraded
     automatically, please use sbuild-hold.  See sbuild-hold(1).

  2) The configuration option $chroot_mode has been restored, allowing
     chroot access by both schroot (which remains the default) and
     sudo.

  3) A new configuration option $chroot_split has been added.  This
     allows both schroot and sudo chroot access to be modified to run